-------------------------- aqp 0.98-1 (2010-11-23) --------------------------
* soil.slot() now computes aggregate probabilities over user-defined segments
* re-write of weighted profile aggregation functions
  - aqp package now requires Hmisc package
  - using Hmisc::wtd.{mean,var,quantile} to compute values
	+ better adjustment of weights when computing weighted SD
	+ fixes long-standing bugs with wt. mean/SD when NA present in x_i and not in wt_i
	+ weighted quantiles now computed
* addition of new (experimental) S4 classes and methods
  - these are now in the aqp_S4 branch
* added n.depth.ticks option to profile_plot()
* profile_compare() algorithm stabilized, new default settings
* removed code in profile_compare() that is now obsolete
  - note that this will cause changes to numerical classification of soil profiles

-------------------------- aqp 0.97-1 (2010-10-06) --------------------------
* verified that weighted standard deviations are correct when seg_size > 1
* removed notices about possible problems with sd calculations

-------------------------- aqp 0.97 (2010-09-22) --------------------------
* soil.slot() streamlined and functionality restored to pre-0.95 condition

-------------------------- aqp 0.96-1 (2010-09-21) --------------------------
* fixed weighted mean / SD calculation when using 1 unit segments in soil.slot()
  - wt. mean / SD still disabled for user-defined segment sizes

-------------------------- aqp 0.96 (2010-09-20) --------------------------
* temporarily disabled parallel computation, will be re-added in next release
* bug fixes in panel.depth_function where 'groups' was not defined
* bug fixes and major re-factoring of soil.slot() when called with user-defined 
  segment size, or segmenting vector:
  - SD values are probably too low due to an inflated 'n' in the calculation
  - calculation of weighted mean and sd is currently disabled

-------------------------- aqp 0.95 (2010-09-15) --------------------------